fix: поменял z-index на переменную

--- a/src/assets/styles/_variables.css
+++ b/src/assets/styles/_variables.css
@@ -26,4 +26,6 @@
   /* Эффекты */
   --border-radius: 8px;
   --box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+
+  --z-index-modal: 1000;
 }
